# ai-hackathon-2025

./: README.md
group_1/: indexing.py  pyproject.toml  retrieval.py
group_3/: README.md  agent_test.py  analyser.py  experiment.ipynb  inspect_db.py  main.py  operator_groups.txt  pyproject.toml  requirements.txt  resp.txt  topdesk.py  topdesk_action.py  vector_db.py
group_3/topdesk_analyser/: agent.py  schema.py  utils.py
group_3/topdesk_vectordb/: chroma.sqlite3  database_info.json
group_5/: README.md  research_digital_solution_generator_tool.py
group_5/input/: RDSG_data.csv  Research_IT_Requirements_Output.csv  grant_text.txt  prompt.txt  research_it_website_content.txt
group_5/output/: research_it_technical_requirements.csv
group_7/: README.md
group_8/: README.md
