[project]
name = "ai-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.20",
    "langchain-community>=0.3.29",
    "langchain-huggingface>=0.3.1",
    "pandas>=2.3.2",
    "pypdf>=6.0.0",
    "sentence-transformers>=5.1.0",
]
